@@ -33,7 +33,7 @@ oclock_SOURCES =	\
         transform.c \
         transform.h
 
-appman_SOURCES = \
+appman_PRE = \
         oclock.man
 
 # App default files  (*.ad)
@@ -58,9 +58,9 @@ CLEANFILES = $(APPDEFAULTFILES)
 
 appmandir = $(APP_MAN_DIR)
 
-appman_DATA = $(appman_SOURCES:man=@APP_MAN_SUFFIX@)
+appman_DATA = $(appman_PRE:man=@APP_MAN_SUFFIX@)
 
-EXTRA_DIST += $(appman_SOURCES)
+EXTRA_DIST += $(appman_PRE)
 CLEANFILES += $(appman_DATA)
 
 SED = sed
